--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["tqdm"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
-dynamic = ["version", "description"]
+name = "AEMETScrapper"
+authors = [{name = "Daniel Enériz", email = "eneriz@unizar.es"}]
+dynamic = ["0.1", "A simple AEMET OpenData API scrapper"]
